@startuml position_weighted_filter_data
!include ../style.puml

title PositionWeightedFilterData Class Diagram

class Token <<data>>
class TokenContext <<data>>

class PositionWeightedFilterParam <<data>> {
    offset: int
    chunk: np.ndarray
    segment_tokens: list[Token]
    + {static} from_context(context: TokenContext) : PositionWeightedFilterParam
}

class PositionWeightedFilterResult <<data>> {
    + update_context(self, context: TokenContext) : None
}

PositionWeightedFilterParam --> TokenContext
PositionWeightedFilterParam --> Token
PositionWeightedFilterResult --> TokenContext

@enduml
